parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    TOKEN_COMMENT
    TOKEN_ERROR

Grammar

Rule 0     S' -> program
Rule 1     program -> macros classes
Rule 2     macros -> macros macro
Rule 3     macros -> <empty>
Rule 4     macro -> reference
Rule 5     reference -> TOKEN_REFERENCE TOKEN_STRING
Rule 6     classes -> classes class
Rule 7     classes -> <empty>
Rule 8     class -> TOKEN_CLASS TOKEN_ID TOKEN_LCB symbol_decs TOKEN_RCB
Rule 9     symbol_decs -> symbol_decs symbol_dec
Rule 10    symbol_decs -> <empty>
Rule 11    symbol_dec -> var_dec
Rule 12    symbol_dec -> func_dec
Rule 13    var_dec -> var_type var_list TOKEN_SEMICOLON
Rule 14    var_type -> return_type
Rule 15    var_type -> lvalue1
Rule 16    var_type -> TOKEN_STATIC return_type
Rule 17    var_type -> TOKEN_STATIC lvalue1
Rule 18    return_type -> TOKEN_INT_TYPE
Rule 19    return_type -> TOKEN_REAL_TYPE
Rule 20    return_type -> TOKEN_BOOL_TYPE
Rule 21    return_type -> TOKEN_STRING_TYPE
Rule 22    var_list -> var_list TOKEN_COMMA var_list_item
Rule 23    var_list -> var_list_item
Rule 24    item1 -> TOKEN_ID TOKEN_ASSIGNMENT exp
Rule 25    var_list_item -> item1
Rule 26    var_list_item -> TOKEN_ID
Rule 27    func_dec -> var_type func_body
Rule 28    func_dec -> TOKEN_VOID func_body
Rule 29    func_dec -> TOKEN_STATIC TOKEN_VOID func_body
Rule 30    func_body -> TOKEN_ID TOKEN_LP formal_arguments TOKEN_RP block
Rule 31    formal_arguments -> formal_arguments_list
Rule 32    formal_arguments -> <empty>
Rule 33    formal_arguments_list -> formal_arguments_list TOKEN_COMMA formal_argument
Rule 34    formal_arguments_list -> formal_argument
Rule 35    formal_argument -> return_type TOKEN_ID
Rule 36    formal_argument -> lvalue1 TOKEN_ID
Rule 37    block -> TOKEN_LCB statements_list TOKEN_RCB
Rule 38    block -> statement
Rule 39    statements_list -> statements_list statement
Rule 40    statements_list -> <empty>
Rule 41    statement -> TOKEN_SEMICOLON
Rule 42    statement -> exp TOKEN_SEMICOLON
Rule 43    statement -> assignment
Rule 44    statement -> print
Rule 45    statement -> statement_var_dec
Rule 46    statement -> if
Rule 47    statement -> for
Rule 48    statement -> while
Rule 49    statement -> return
Rule 50    statement -> break
Rule 51    statement -> continue
Rule 52    assignment -> lvalue TOKEN_ASSIGNMENT exp TOKEN_SEMICOLON
Rule 53    lvalue -> lvalue1
Rule 54    lvalue -> lvalue2
Rule 55    lvalue2 -> TOKEN_ID TOKEN_DOT TOKEN_ID
Rule 56    lvalue1 -> TOKEN_ID
Rule 57    print -> TOKEN_PRINT TOKEN_LP TOKEN_STRING TOKEN_RP TOKEN_SEMICOLON
Rule 58    statement_var_dec -> return_type var_list TOKEN_SEMICOLON
Rule 59    statement_var_dec -> lvalue1 var_list TOKEN_SEMICOLON
Rule 60    if -> TOKEN_IF TOKEN_LP exp TOKEN_RP block
Rule 61    if -> TOKEN_IF TOKEN_LP exp TOKEN_RP block TOKEN_ELSE block
Rule 62    if -> TOKEN_IF TOKEN_LP exp TOKEN_RP block elseifs
Rule 63    if -> TOKEN_IF TOKEN_LP exp TOKEN_RP block elseifs TOKEN_ELSE block
Rule 64    elseifs -> elseifs elseif
Rule 65    elseifs -> elseif
Rule 66    elseif -> TOKEN_ELSEIF TOKEN_LP exp TOKEN_RP block
Rule 67    for -> TOKEN_FOR TOKEN_LP TOKEN_ID TOKEN_IN exp TOKEN_TO exp TOKEN_STEPS exp TOKEN_RP block
Rule 68    while -> TOKEN_WHILE TOKEN_LP exp TOKEN_RP block
Rule 69    return -> TOKEN_RETURN exp TOKEN_SEMICOLON
Rule 70    break -> TOKEN_BREAK TOKEN_SEMICOLON
Rule 71    continue -> TOKEN_CONTINUE TOKEN_SEMICOLON
Rule 72    exp -> TOKEN_INTEGER
Rule 73    exp -> TOKEN_REAL
Rule 74    exp -> TOKEN_TRUE
Rule 75    exp -> TOKEN_FALSE
Rule 76    exp -> TOKEN_STRING
Rule 77    exp -> lvalue
Rule 78    exp -> binary_operation
Rule 79    exp -> logical_operation
Rule 80    exp -> comparison_operation
Rule 81    exp -> bitwise_operation
Rule 82    exp -> unary_operation
Rule 83    exp -> TOKEN_LP exp TOKEN_RP
Rule 84    exp -> function_call
Rule 85    binary_operation -> exp TOKEN_ADDITION exp
Rule 86    binary_operation -> exp TOKEN_SUBTRACTION exp
Rule 87    binary_operation -> exp TOKEN_MULTIPLICATION exp
Rule 88    binary_operation -> exp TOKEN_DIVISION exp
Rule 89    binary_operation -> exp TOKEN_MODULO exp
Rule 90    binary_operation -> exp TOKEN_POWER exp
Rule 91    binary_operation -> exp TOKEN_SHIFT_LEFT exp
Rule 92    binary_operation -> exp TOKEN_SHIFT_RIGHT exp
Rule 93    logical_operation -> exp TOKEN_AND exp
Rule 94    logical_operation -> exp TOKEN_OR exp
Rule 95    comparison_operation -> exp TOKEN_LT exp
Rule 96    comparison_operation -> exp TOKEN_LE exp
Rule 97    comparison_operation -> exp TOKEN_GT exp
Rule 98    comparison_operation -> exp TOKEN_GE exp
Rule 99    comparison_operation -> exp TOKEN_EQ exp
Rule 100   comparison_operation -> exp TOKEN_NE exp
Rule 101   bitwise_operation -> exp TOKEN_BITWISE_AND exp
Rule 102   bitwise_operation -> exp TOKEN_BITWISE_OR exp
Rule 103   unary_operation -> TOKEN_SUBTRACTION exp
Rule 104   unary_operation -> TOKEN_NOT exp
Rule 105   unary_operation -> TOKEN_BITWISE_NOT exp
Rule 106   function_call -> TOKEN_ID function_call_body
Rule 107   function_call -> TOKEN_ID TOKEN_DOT TOKEN_ID function_call_body
Rule 108   function_call_body -> TOKEN_LP actual_arguments TOKEN_RP
Rule 109   actual_arguments -> actual_arguments_list
Rule 110   actual_arguments -> <empty>
Rule 111   actual_arguments_list -> actual_arguments_list TOKEN_COMMA exp
Rule 112   actual_arguments_list -> exp

Terminals, with rules where they appear

TOKEN_ADDITION       : 85
TOKEN_AND            : 93
TOKEN_ASSIGNMENT     : 24 52
TOKEN_BITWISE_AND    : 101
TOKEN_BITWISE_NOT    : 105
TOKEN_BITWISE_OR     : 102
TOKEN_BOOL_TYPE      : 20
TOKEN_BREAK          : 70
TOKEN_CLASS          : 8
TOKEN_COMMA          : 22 33 111
TOKEN_COMMENT        : 
TOKEN_CONTINUE       : 71
TOKEN_DIVISION       : 88
TOKEN_DOT            : 55 107
TOKEN_ELSE           : 61 63
TOKEN_ELSEIF         : 66
TOKEN_EQ             : 99
TOKEN_ERROR          : 
TOKEN_FALSE          : 75
TOKEN_FOR            : 67
TOKEN_GE             : 98
TOKEN_GT             : 97
TOKEN_ID             : 8 24 26 30 35 36 55 55 56 67 106 107 107
TOKEN_IF             : 60 61 62 63
TOKEN_IN             : 67
TOKEN_INTEGER        : 72
TOKEN_INT_TYPE       : 18
TOKEN_LCB            : 8 37
TOKEN_LE             : 96
TOKEN_LP             : 30 57 60 61 62 63 66 67 68 83 108
TOKEN_LT             : 95
TOKEN_MODULO         : 89
TOKEN_MULTIPLICATION : 87
TOKEN_NE             : 100
TOKEN_NOT            : 104
TOKEN_OR             : 94
TOKEN_POWER          : 90
TOKEN_PRINT          : 57
TOKEN_RCB            : 8 37
TOKEN_REAL           : 73
TOKEN_REAL_TYPE      : 19
TOKEN_REFERENCE      : 5
TOKEN_RETURN         : 69
TOKEN_RP             : 30 57 60 61 62 63 66 67 68 83 108
TOKEN_SEMICOLON      : 13 41 42 52 57 58 59 69 70 71
TOKEN_SHIFT_LEFT     : 91
TOKEN_SHIFT_RIGHT    : 92
TOKEN_STATIC         : 16 17 29
TOKEN_STEPS          : 67
TOKEN_STRING         : 5 57 76
TOKEN_STRING_TYPE    : 21
TOKEN_SUBTRACTION    : 86 103
TOKEN_TO             : 67
TOKEN_TRUE           : 74
TOKEN_VOID           : 28 29
TOKEN_WHILE          : 68
error                : 

Nonterminals, with rules where they appear

actual_arguments     : 108
actual_arguments_list : 109 111
assignment           : 43
binary_operation     : 78
bitwise_operation    : 81
block                : 30 60 61 61 62 63 63 66 67 68
break                : 50
class                : 6
classes              : 1 6
comparison_operation : 80
continue             : 51
elseif               : 64 65
elseifs              : 62 63 64
exp                  : 24 42 52 60 61 62 63 66 67 67 67 68 69 83 85 85 86 86 87 87 88 88 89 89 90 90 91 91 92 92 93 93 94 94 95 95 96 96 97 97 98 98 99 99 100 100 101 101 102 102 103 104 105 111 112
for                  : 47
formal_argument      : 33 34
formal_arguments     : 30
formal_arguments_list : 31 33
func_body            : 27 28 29
func_dec             : 12
function_call        : 84
function_call_body   : 106 107
if                   : 46
item1                : 25
logical_operation    : 79
lvalue               : 52 77
lvalue1              : 15 17 36 53 59
lvalue2              : 54
macro                : 2
macros               : 1 2
print                : 44
program              : 0
reference            : 4
return               : 49
return_type          : 14 16 35 58
statement            : 38 39
statement_var_dec    : 45
statements_list      : 37 39
symbol_dec           : 9
symbol_decs          : 8 9
unary_operation      : 82
var_dec              : 11
var_list             : 13 22 58 59
var_list_item        : 22 23
var_type             : 13 27
while                : 48

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . macros classes
    (2) macros -> . macros macro
    (3) macros -> .

    TOKEN_REFERENCE reduce using rule 3 (macros -> .)
    TOKEN_CLASS     reduce using rule 3 (macros -> .)
    $end            reduce using rule 3 (macros -> .)

    program                        shift and go to state 1
    macros                         shift and go to state 2

state 1

    (0) S' -> program .



state 2

    (1) program -> macros . classes
    (2) macros -> macros . macro
    (6) classes -> . classes class
    (7) classes -> .
    (4) macro -> . reference
    (5) reference -> . TOKEN_REFERENCE TOKEN_STRING

    TOKEN_CLASS     reduce using rule 7 (classes -> .)
    $end            reduce using rule 7 (classes -> .)
    TOKEN_REFERENCE shift and go to state 6

    classes                        shift and go to state 3
    macro                          shift and go to state 4
    reference                      shift and go to state 5

state 3

    (1) program -> macros classes .
    (6) classes -> classes . class
    (8) class -> . TOKEN_CLASS TOKEN_ID TOKEN_LCB symbol_decs TOKEN_RCB

    $end            reduce using rule 1 (program -> macros classes .)
    TOKEN_CLASS     shift and go to state 8

    class                          shift and go to state 7

state 4

    (2) macros -> macros macro .

    TOKEN_REFERENCE reduce using rule 2 (macros -> macros macro .)
    TOKEN_CLASS     reduce using rule 2 (macros -> macros macro .)
    $end            reduce using rule 2 (macros -> macros macro .)


state 5

    (4) macro -> reference .

    TOKEN_REFERENCE reduce using rule 4 (macro -> reference .)
    TOKEN_CLASS     reduce using rule 4 (macro -> reference .)
    $end            reduce using rule 4 (macro -> reference .)


state 6

    (5) reference -> TOKEN_REFERENCE . TOKEN_STRING

    TOKEN_STRING    shift and go to state 9


state 7

    (6) classes -> classes class .

    TOKEN_CLASS     reduce using rule 6 (classes -> classes class .)
    $end            reduce using rule 6 (classes -> classes class .)


state 8

    (8) class -> TOKEN_CLASS . TOKEN_ID TOKEN_LCB symbol_decs TOKEN_RCB

    TOKEN_ID        shift and go to state 10


state 9

    (5) reference -> TOKEN_REFERENCE TOKEN_STRING .

    TOKEN_REFERENCE reduce using rule 5 (reference -> TOKEN_REFERENCE TOKEN_STRING .)
    TOKEN_CLASS     reduce using rule 5 (reference -> TOKEN_REFERENCE TOKEN_STRING .)
    $end            reduce using rule 5 (reference -> TOKEN_REFERENCE TOKEN_STRING .)


state 10

    (8) class -> TOKEN_CLASS TOKEN_ID . TOKEN_LCB symbol_decs TOKEN_RCB

    TOKEN_LCB       shift and go to state 11


state 11

    (8) class -> TOKEN_CLASS TOKEN_ID TOKEN_LCB . symbol_decs TOKEN_RCB
    (9) symbol_decs -> . symbol_decs symbol_dec
    (10) symbol_decs -> .

    TOKEN_RCB       reduce using rule 10 (symbol_decs -> .)
    TOKEN_VOID      reduce using rule 10 (symbol_decs -> .)
    TOKEN_STATIC    reduce using rule 10 (symbol_decs -> .)
    TOKEN_INT_TYPE  reduce using rule 10 (symbol_decs -> .)
    TOKEN_REAL_TYPE reduce using rule 10 (symbol_decs -> .)
    TOKEN_BOOL_TYPE reduce using rule 10 (symbol_decs -> .)
    TOKEN_STRING_TYPE reduce using rule 10 (symbol_decs -> .)
    TOKEN_ID        reduce using rule 10 (symbol_decs -> .)

    symbol_decs                    shift and go to state 12

state 12

    (8) class -> TOKEN_CLASS TOKEN_ID TOKEN_LCB symbol_decs . TOKEN_RCB
    (9) symbol_decs -> symbol_decs . symbol_dec
    (11) symbol_dec -> . var_dec
    (12) symbol_dec -> . func_dec
    (13) var_dec -> . var_type var_list TOKEN_SEMICOLON
    (27) func_dec -> . var_type func_body
    (28) func_dec -> . TOKEN_VOID func_body
    (29) func_dec -> . TOKEN_STATIC TOKEN_VOID func_body
    (14) var_type -> . return_type
    (15) var_type -> . lvalue1
    (16) var_type -> . TOKEN_STATIC return_type
    (17) var_type -> . TOKEN_STATIC lvalue1
    (18) return_type -> . TOKEN_INT_TYPE
    (19) return_type -> . TOKEN_REAL_TYPE
    (20) return_type -> . TOKEN_BOOL_TYPE
    (21) return_type -> . TOKEN_STRING_TYPE
    (56) lvalue1 -> . TOKEN_ID

    TOKEN_RCB       shift and go to state 14
    TOKEN_VOID      shift and go to state 19
    TOKEN_STATIC    shift and go to state 20
    TOKEN_INT_TYPE  shift and go to state 23
    TOKEN_REAL_TYPE shift and go to state 24
    TOKEN_BOOL_TYPE shift and go to state 25
    TOKEN_STRING_TYPE shift and go to state 26
    TOKEN_ID        shift and go to state 13

    symbol_dec                     shift and go to state 15
    var_dec                        shift and go to state 16
    func_dec                       shift and go to state 17
    var_type                       shift and go to state 18
    return_type                    shift and go to state 21
    lvalue1                        shift and go to state 22

state 13

    (56) lvalue1 -> TOKEN_ID .

    TOKEN_ID        reduce using rule 56 (lvalue1 -> TOKEN_ID .)


state 14

    (8) class -> TOKEN_CLASS TOKEN_ID TOKEN_LCB symbol_decs TOKEN_RCB .

    TOKEN_CLASS     reduce using rule 8 (class -> TOKEN_CLASS TOKEN_ID TOKEN_LCB symbol_decs TOKEN_RCB .)
    $end            reduce using rule 8 (class -> TOKEN_CLASS TOKEN_ID TOKEN_LCB symbol_decs TOKEN_RCB .)


state 15

    (9) symbol_decs -> symbol_decs symbol_dec .

    TOKEN_RCB       reduce using rule 9 (symbol_decs -> symbol_decs symbol_dec .)
    TOKEN_VOID      reduce using rule 9 (symbol_decs -> symbol_decs symbol_dec .)
    TOKEN_STATIC    reduce using rule 9 (symbol_decs -> symbol_decs symbol_dec .)
    TOKEN_INT_TYPE  reduce using rule 9 (symbol_decs -> symbol_decs symbol_dec .)
    TOKEN_REAL_TYPE reduce using rule 9 (symbol_decs -> symbol_decs symbol_dec .)
    TOKEN_BOOL_TYPE reduce using rule 9 (symbol_decs -> symbol_decs symbol_dec .)
    TOKEN_STRING_TYPE reduce using rule 9 (symbol_decs -> symbol_decs symbol_dec .)
    TOKEN_ID        reduce using rule 9 (symbol_decs -> symbol_decs symbol_dec .)


state 16

    (11) symbol_dec -> var_dec .

    TOKEN_RCB       reduce using rule 11 (symbol_dec -> var_dec .)
    TOKEN_VOID      reduce using rule 11 (symbol_dec -> var_dec .)
    TOKEN_STATIC    reduce using rule 11 (symbol_dec -> var_dec .)
    TOKEN_INT_TYPE  reduce using rule 11 (symbol_dec -> var_dec .)
    TOKEN_REAL_TYPE reduce using rule 11 (symbol_dec -> var_dec .)
    TOKEN_BOOL_TYPE reduce using rule 11 (symbol_dec -> var_dec .)
    TOKEN_STRING_TYPE reduce using rule 11 (symbol_dec -> var_dec .)
    TOKEN_ID        reduce using rule 11 (symbol_dec -> var_dec .)


state 17

    (12) symbol_dec -> func_dec .

    TOKEN_RCB       reduce using rule 12 (symbol_dec -> func_dec .)
    TOKEN_VOID      reduce using rule 12 (symbol_dec -> func_dec .)
    TOKEN_STATIC    reduce using rule 12 (symbol_dec -> func_dec .)
    TOKEN_INT_TYPE  reduce using rule 12 (symbol_dec -> func_dec .)
    TOKEN_REAL_TYPE reduce using rule 12 (symbol_dec -> func_dec .)
    TOKEN_BOOL_TYPE reduce using rule 12 (symbol_dec -> func_dec .)
    TOKEN_STRING_TYPE reduce using rule 12 (symbol_dec -> func_dec .)
    TOKEN_ID        reduce using rule 12 (symbol_dec -> func_dec .)


state 18

    (13) var_dec -> var_type . var_list TOKEN_SEMICOLON
    (27) func_dec -> var_type . func_body
    (22) var_list -> . var_list TOKEN_COMMA var_list_item
    (23) var_list -> . var_list_item
    (30) func_body -> . TOKEN_ID TOKEN_LP formal_arguments TOKEN_RP block
    (25) var_list_item -> . item1
    (26) var_list_item -> . TOKEN_ID
    (24) item1 -> . TOKEN_ID TOKEN_ASSIGNMENT exp

    TOKEN_ID        shift and go to state 30

    var_list                       shift and go to state 27
    func_body                      shift and go to state 28
    var_list_item                  shift and go to state 29
    item1                          shift and go to state 31

state 19

    (28) func_dec -> TOKEN_VOID . func_body
    (30) func_body -> . TOKEN_ID TOKEN_LP formal_arguments TOKEN_RP block

    TOKEN_ID        shift and go to state 33

    func_body                      shift and go to state 32

state 20

    (29) func_dec -> TOKEN_STATIC . TOKEN_VOID func_body
    (16) var_type -> TOKEN_STATIC . return_type
    (17) var_type -> TOKEN_STATIC . lvalue1
    (18) return_type -> . TOKEN_INT_TYPE
    (19) return_type -> . TOKEN_REAL_TYPE
    (20) return_type -> . TOKEN_BOOL_TYPE
    (21) return_type -> . TOKEN_STRING_TYPE
    (56) lvalue1 -> . TOKEN_ID

    TOKEN_VOID      shift and go to state 34
    TOKEN_INT_TYPE  shift and go to state 23
    TOKEN_REAL_TYPE shift and go to state 24
    TOKEN_BOOL_TYPE shift and go to state 25
    TOKEN_STRING_TYPE shift and go to state 26
    TOKEN_ID        shift and go to state 13

    return_type                    shift and go to state 35
    lvalue1                        shift and go to state 36

state 21

    (14) var_type -> return_type .

    TOKEN_ID        reduce using rule 14 (var_type -> return_type .)


state 22

    (15) var_type -> lvalue1 .

    TOKEN_ID        reduce using rule 15 (var_type -> lvalue1 .)


state 23

    (18) return_type -> TOKEN_INT_TYPE .

    TOKEN_ID        reduce using rule 18 (return_type -> TOKEN_INT_TYPE .)


state 24

    (19) return_type -> TOKEN_REAL_TYPE .

    TOKEN_ID        reduce using rule 19 (return_type -> TOKEN_REAL_TYPE .)


state 25

    (20) return_type -> TOKEN_BOOL_TYPE .

    TOKEN_ID        reduce using rule 20 (return_type -> TOKEN_BOOL_TYPE .)


state 26

    (21) return_type -> TOKEN_STRING_TYPE .

    TOKEN_ID        reduce using rule 21 (return_type -> TOKEN_STRING_TYPE .)


state 27

    (13) var_dec -> var_type var_list . TOKEN_SEMICOLON
    (22) var_list -> var_list . TOKEN_COMMA var_list_item

    TOKEN_SEMICOLON shift and go to state 37
    TOKEN_COMMA     shift and go to state 38


state 28

    (27) func_dec -> var_type func_body .

    TOKEN_RCB       reduce using rule 27 (func_dec -> var_type func_body .)
    TOKEN_VOID      reduce using rule 27 (func_dec -> var_type func_body .)
    TOKEN_STATIC    reduce using rule 27 (func_dec -> var_type func_body .)
    TOKEN_INT_TYPE  reduce using rule 27 (func_dec -> var_type func_body .)
    TOKEN_REAL_TYPE reduce using rule 27 (func_dec -> var_type func_body .)
    TOKEN_BOOL_TYPE reduce using rule 27 (func_dec -> var_type func_body .)
    TOKEN_STRING_TYPE reduce using rule 27 (func_dec -> var_type func_body .)
    TOKEN_ID        reduce using rule 27 (func_dec -> var_type func_body .)


state 29

    (23) var_list -> var_list_item .

    TOKEN_SEMICOLON reduce using rule 23 (var_list -> var_list_item .)
    TOKEN_COMMA     reduce using rule 23 (var_list -> var_list_item .)


state 30

    (30) func_body -> TOKEN_ID . TOKEN_LP formal_arguments TOKEN_RP block
    (26) var_list_item -> TOKEN_ID .
    (24) item1 -> TOKEN_ID . TOKEN_ASSIGNMENT exp

    TOKEN_LP        shift and go to state 39
    TOKEN_SEMICOLON reduce using rule 26 (var_list_item -> TOKEN_ID .)
    TOKEN_COMMA     reduce using rule 26 (var_list_item -> TOKEN_ID .)
    TOKEN_ASSIGNMENT shift and go to state 40


state 31

    (25) var_list_item -> item1 .

    TOKEN_SEMICOLON reduce using rule 25 (var_list_item -> item1 .)
    TOKEN_COMMA     reduce using rule 25 (var_list_item -> item1 .)


state 32

    (28) func_dec -> TOKEN_VOID func_body .

    TOKEN_RCB       reduce using rule 28 (func_dec -> TOKEN_VOID func_body .)
    TOKEN_VOID      reduce using rule 28 (func_dec -> TOKEN_VOID func_body .)
    TOKEN_STATIC    reduce using rule 28 (func_dec -> TOKEN_VOID func_body .)
    TOKEN_INT_TYPE  reduce using rule 28 (func_dec -> TOKEN_VOID func_body .)
    TOKEN_REAL_TYPE reduce using rule 28 (func_dec -> TOKEN_VOID func_body .)
    TOKEN_BOOL_TYPE reduce using rule 28 (func_dec -> TOKEN_VOID func_body .)
    TOKEN_STRING_TYPE reduce using rule 28 (func_dec -> TOKEN_VOID func_body .)
    TOKEN_ID        reduce using rule 28 (func_dec -> TOKEN_VOID func_body .)


state 33

    (30) func_body -> TOKEN_ID . TOKEN_LP formal_arguments TOKEN_RP block

    TOKEN_LP        shift and go to state 39


state 34

    (29) func_dec -> TOKEN_STATIC TOKEN_VOID . func_body
    (30) func_body -> . TOKEN_ID TOKEN_LP formal_arguments TOKEN_RP block

    TOKEN_ID        shift and go to state 33

    func_body                      shift and go to state 41

state 35

    (16) var_type -> TOKEN_STATIC return_type .

    TOKEN_ID        reduce using rule 16 (var_type -> TOKEN_STATIC return_type .)


state 36

    (17) var_type -> TOKEN_STATIC lvalue1 .

    TOKEN_ID        reduce using rule 17 (var_type -> TOKEN_STATIC lvalue1 .)


state 37

    (13) var_dec -> var_type var_list TOKEN_SEMICOLON .

    TOKEN_RCB       reduce using rule 13 (var_dec -> var_type var_list TOKEN_SEMICOLON .)
    TOKEN_VOID      reduce using rule 13 (var_dec -> var_type var_list TOKEN_SEMICOLON .)
    TOKEN_STATIC    reduce using rule 13 (var_dec -> var_type var_list TOKEN_SEMICOLON .)
    TOKEN_INT_TYPE  reduce using rule 13 (var_dec -> var_type var_list TOKEN_SEMICOLON .)
    TOKEN_REAL_TYPE reduce using rule 13 (var_dec -> var_type var_list TOKEN_SEMICOLON .)
    TOKEN_BOOL_TYPE reduce using rule 13 (var_dec -> var_type var_list TOKEN_SEMICOLON .)
    TOKEN_STRING_TYPE reduce using rule 13 (var_dec -> var_type var_list TOKEN_SEMICOLON .)
    TOKEN_ID        reduce using rule 13 (var_dec -> var_type var_list TOKEN_SEMICOLON .)


state 38

    (22) var_list -> var_list TOKEN_COMMA . var_list_item
    (25) var_list_item -> . item1
    (26) var_list_item -> . TOKEN_ID
    (24) item1 -> . TOKEN_ID TOKEN_ASSIGNMENT exp

    TOKEN_ID        shift and go to state 43

    var_list_item                  shift and go to state 42
    item1                          shift and go to state 31

state 39

    (30) func_body -> TOKEN_ID TOKEN_LP . formal_arguments TOKEN_RP block
    (31) formal_arguments -> . formal_arguments_list
    (32) formal_arguments -> .
    (33) formal_arguments_list -> . formal_arguments_list TOKEN_COMMA formal_argument
    (34) formal_arguments_list -> . formal_argument
    (35) formal_argument -> . return_type TOKEN_ID
    (36) formal_argument -> . lvalue1 TOKEN_ID
    (18) return_type -> . TOKEN_INT_TYPE
    (19) return_type -> . TOKEN_REAL_TYPE
    (20) return_type -> . TOKEN_BOOL_TYPE
    (21) return_type -> . TOKEN_STRING_TYPE
    (56) lvalue1 -> . TOKEN_ID

    TOKEN_RP        reduce using rule 32 (formal_arguments -> .)
    TOKEN_INT_TYPE  shift and go to state 23
    TOKEN_REAL_TYPE shift and go to state 24
    TOKEN_BOOL_TYPE shift and go to state 25
    TOKEN_STRING_TYPE shift and go to state 26
    TOKEN_ID        shift and go to state 13

    formal_arguments               shift and go to state 44
    formal_arguments_list          shift and go to state 45
    formal_argument                shift and go to state 46
    return_type                    shift and go to state 47
    lvalue1                        shift and go to state 48

state 40

    (24) item1 -> TOKEN_ID TOKEN_ASSIGNMENT . exp
    (72) exp -> . TOKEN_INTEGER
    (73) exp -> . TOKEN_REAL
    (74) exp -> . TOKEN_TRUE
    (75) exp -> . TOKEN_FALSE
    (76) exp -> . TOKEN_STRING
    (77) exp -> . lvalue
    (78) exp -> . binary_operation
    (79) exp -> . logical_operation
    (80) exp -> . comparison_operation
    (81) exp -> . bitwise_operation
    (82) exp -> . unary_operation
    (83) exp -> . TOKEN_LP exp TOKEN_RP
    (84) exp -> . function_call
    (53) lvalue -> . lvalue1
    (54) lvalue -> . lvalue2
    (85) binary_operation -> . exp TOKEN_ADDITION exp
    (86) binary_operation -> . exp TOKEN_SUBTRACTION exp
    (87) binary_operation -> . exp TOKEN_MULTIPLICATION exp
    (88) binary_operation -> . exp TOKEN_DIVISION exp
    (89) binary_operation -> . exp TOKEN_MODULO exp
    (90) binary_operation -> . exp TOKEN_POWER exp
    (91) binary_operation -> . exp TOKEN_SHIFT_LEFT exp
    (92) binary_operation -> . exp TOKEN_SHIFT_RIGHT exp
    (93) logical_operation -> . exp TOKEN_AND exp
    (94) logical_operation -> . exp TOKEN_OR exp
    (95) comparison_operation -> . exp TOKEN_LT exp
    (96) comparison_operation -> . exp TOKEN_LE exp
    (97) comparison_operation -> . exp TOKEN_GT exp
    (98) comparison_operation -> . exp TOKEN_GE exp
    (99) comparison_operation -> . exp TOKEN_EQ exp
    (100) comparison_operation -> . exp TOKEN_NE exp
    (101) bitwise_operation -> . exp TOKEN_BITWISE_AND exp
    (102) bitwise_operation -> . exp TOKEN_BITWISE_OR exp
    (103) unary_operation -> . TOKEN_SUBTRACTION exp
    (104) unary_operation -> . TOKEN_NOT exp
    (105) unary_operation -> . TOKEN_BITWISE_NOT exp
    (106) function_call -> . TOKEN_ID function_call_body
    (107) function_call -> . TOKEN_ID TOKEN_DOT TOKEN_ID function_call_body
    (56) lvalue1 -> . TOKEN_ID
    (55) lvalue2 -> . TOKEN_ID TOKEN_DOT TOKEN_ID

    TOKEN_INTEGER   shift and go to state 51
    TOKEN_REAL      shift and go to state 52
    TOKEN_TRUE      shift and go to state 53
    TOKEN_FALSE     shift and go to state 54
    TOKEN_STRING    shift and go to state 55
    TOKEN_LP        shift and go to state 62
    TOKEN_SUBTRACTION shift and go to state 66
    TOKEN_NOT       shift and go to state 67
    TOKEN_BITWISE_NOT shift and go to state 68
    TOKEN_ID        shift and go to state 49

    exp                            shift and go to state 50
    lvalue                         shift and go to state 56
    binary_operation               shift and go to state 57
    logical_operation              shift and go to state 58
    comparison_operation           shift and go to state 59
    bitwise_operation              shift and go to state 60
    unary_operation                shift and go to state 61
    function_call                  shift and go to state 63
    lvalue1                        shift and go to state 64
    lvalue2                        shift and go to state 65

state 41

    (29) func_dec -> TOKEN_STATIC TOKEN_VOID func_body .

    TOKEN_RCB       reduce using rule 29 (func_dec -> TOKEN_STATIC TOKEN_VOID func_body .)
    TOKEN_VOID      reduce using rule 29 (func_dec -> TOKEN_STATIC TOKEN_VOID func_body .)
    TOKEN_STATIC    reduce using rule 29 (func_dec -> TOKEN_STATIC TOKEN_VOID func_body .)
    TOKEN_INT_TYPE  reduce using rule 29 (func_dec -> TOKEN_STATIC TOKEN_VOID func_body .)
    TOKEN_REAL_TYPE reduce using rule 29 (func_dec -> TOKEN_STATIC TOKEN_VOID func_body .)
    TOKEN_BOOL_TYPE reduce using rule 29 (func_dec -> TOKEN_STATIC TOKEN_VOID func_body .)
    TOKEN_STRING_TYPE reduce using rule 29 (func_dec -> TOKEN_STATIC TOKEN_VOID func_body .)
    TOKEN_ID        reduce using rule 29 (func_dec -> TOKEN_STATIC TOKEN_VOID func_body .)


state 42

    (22) var_list -> var_list TOKEN_COMMA var_list_item .

    TOKEN_SEMICOLON reduce using rule 22 (var_list -> var_list TOKEN_COMMA var_list_item .)
    TOKEN_COMMA     reduce using rule 22 (var_list -> var_list TOKEN_COMMA var_list_item .)


state 43

    (26) var_list_item -> TOKEN_ID .
    (24) item1 -> TOKEN_ID . TOKEN_ASSIGNMENT exp

    TOKEN_SEMICOLON reduce using rule 26 (var_list_item -> TOKEN_ID .)
    TOKEN_COMMA     reduce using rule 26 (var_list_item -> TOKEN_ID .)
    TOKEN_ASSIGNMENT shift and go to state 40

